# rust-live-learning

./: LICENSE
day-2/: Cargo.toml  Dockerfile
day-2/src/: main.rs
day-3/: Dockerfile
day-3/src/: main.rs
day-4/: Cargo.toml
day-4/src/: main.rs
day-5/: Cargo.toml  ultratodo-service.yaml
day-5/src/: main.rs
day-6/: rust-deployment.yaml  todos.db
day-6/src/: main.rs
day-7/: Cargo.toml  rust-deployment.yaml  todos.db-shm
day-7/migrations/: 20242704234234_todos.sql
day-7/src/: routes.rs  types.rs
day-8/: Dockerfile copy  todos.db  todos.db-wal  ultratodo-service.yaml
day-8/src/: main.rs
day-8/src/storage/: sqlite.rs
day-9/: Cargo.toml  todos.db
day-9/src/: routes.rs
day-9/src/storage/: sqlite.rs
rust101/: Cargo.toml
rust101/src/: main.rs
